--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-force-graph": "^1.48.1",
-    "react-router-dom": "^7.9.3"
+    "react-resizable-panels": "^3.0.6",
+    "react-router-dom": "^7.9.3",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
