--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-force-graph": "^1.48.1",
+    "react-force-graph-2d": "^1.29.0",
     "react-resizable-panels": "^3.0.6",
-    "react-router-dom": "^7.9.3",
-    "three": "^0.180.0"
+    "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
