--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
+    "@xenova/transformers": "^2.17.2",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "dotenv": "^17.2.3",
+    "node-fetch": "^3.3.2",
+    "openai": "^6.1.0"
+  },
+  "name": "sbke-backend",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "build": "npx tsc --build",
+    "start": "node dist"
+  },
+  "devDependencies": {
+    "@types/bun": "latest",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "express": "^5.1.0",
+    "typescript": "^5.9.3"
   }
 }
