--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project-chimera",
   "version": "1.0.0",
   "scripts": {
-    "server": "node server/server.js",
+    "server": "npm start --prefix server",
     "client": "npm run dev --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
