--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "node-fetch": "^3.3.2",
+    "nodemon": "^3.1.10",
     "openai": "^6.1.0"
   },
   "name": "sbke-backend",
