--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,13 @@
 {
   "dependencies": {
+    "@cerebras/cerebras_cloud_sdk": "^1.50.0",
     "@xenova/transformers": "^2.17.2",
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express-rate-limit": "^8.1.0",
     "node-fetch": "^3.3.2",
-    "nodemon": "^3.1.10",
-    "openai": "^6.1.0"
+    "nodemon": "^3.1.10"
   },
   "name": "sbke-backend",
   "private": true,
